// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: typename-on-mutation.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
mutation TestMutation {
  __typename
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Relay does not allow \`__typename\` field on Query, Mutation or Subscription

Source: GraphQL request (3:3)
2: mutation TestMutation {
3:   __typename
     ^
4: }

`;

exports[`matches expected output: typename-on-query.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query TestQuery {
  __typename
  me {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Relay does not allow \`__typename\` field on Query, Mutation or Subscription

Source: GraphQL request (3:3)
2: query TestQuery {
3:   __typename
     ^
4:   me {

`;
